# ComfyUI-OpenAI-FM

./: README.md  openaifm.py  pyproject.toml
.github/workflows/: backup.yml
data/: vibes.json
